<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your username here</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_employee_management_header">EMPLOYEE MANAGEMENT</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height</string>
    <string name="title_weight">Weight</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">Fat</string>
    <string name="title_category">Category</string>
    <string name="title_product">Product</string>
    <string name="title_product_management">PRODUCT MANAGEMENT</string>
    <string name="title_category_management">CATEGORY MANAGEMENT</string>
    <string name="title_advanced_product">Advanced product</string>
    <string name="title_new_customer">New customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_new_product">New product</string>
    <string name="title_refresh_product">Refresh product</string>
    <string name="title_export_product">Export product</string>
    <string name="title_filter_product">Filter product</string>
    <string name="title_compare_product">Compare product</string>
    <string name="title_search_product">Search product</string>
    <string name="title_product_detail">PRODUCT DETAILS</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_name">Product name</string>
    <string name="title_quantity">Quantity</string>
    <string name="title_price">Price</string>
    <string name="title_category_id">Category ID</string>
    <string name="title_description">Description</string>
    <string name="title_payment_method">Payment method</string>
    <string name="title_orders">Orders</string>
    <string name="title_telephonie">Telephonie</string>
    <string name="title_contact_name">Contact name</string>
    <string name="title_phone_number">Phone number</string>

</resources>