<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProductDetailActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_product_detail"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#2c3e50"
        android:paddingBottom="12dp"
        android:paddingTop="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Ví dụ: ảnh sản phẩm -->
            <ImageView
                android:id="@+id/img_product"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_dorachan" />

            <!-- ID sản phẩm -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="4dp"
                android:paddingBottom="4dp"
                android:text="@string/title_product_id"
                android:textColor="#000000"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edt_product_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />

            <!-- Tên sản phẩm -->
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="4dp"
                android:paddingBottom="4dp"
                android:text="@string/title_product_name"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />

            <!-- Số lượng -->
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="4dp"
                android:paddingBottom="4dp"
                android:text="@string/title_quantity"
                android:textColor="#000000"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edt_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />

            <!-- Giá -->
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="4dp"
                android:paddingBottom="4dp"
                android:text="@string/title_price"
                android:textColor="#000000"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edt_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />

            <!-- ID danh mục -->
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_category_id"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:paddingBottom="4dp"
                android:paddingStart="4dp" />
            <EditText
                android:id="@+id/edt_cate_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />

            <!-- Mô tả -->
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_description"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:paddingBottom="4dp"
                android:paddingStart="4dp" />
            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:background="@android:drawable/edit_text"
                android:padding="12dp"
                android:textColor="#2c3e50" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
